<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp"
    android:background="@color/colorPrimary">

    <include layout="@layout/layout_top_x"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text_phoneRegister"
        android:textColor="@color/text_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/register_text_nick"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_centerVertical="true"
                    android:textSize="18sp"
                    android:textColor="@color/text_name"/>

                <com.qb.wxui.widget.EdText
                    android:id="@+id/nicknameEdText"
                    android:hint="@string/register_hint_nickname"
                    android:paddingStart="90dp"
                    android:paddingEnd="0dp"
                    android:textSize="16sp"
                    android:textColor="@color/text_name"
                    android:outlineAmbientShadowColor="@color/colorAccent"
                    android:outlineSpotShadowColor="@color/colorAccent"
                    android:shadowColor="@color/colorAccent"
                    android:textColorHighlight="@color/text_name"
                    android:textColorHint="@color/text_gray"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="16"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/selectImageClick"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/bg_gray">

                <ImageView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="50dp"
                    android:maxWidth="50dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/icon_xiangji_white"
                    android:contentDescription="@string/app_name" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@mipmap/icon_right_sanjiao"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/app_name" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/guoJiaClick"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/recycler_water2"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/register_text_guoJia"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="18sp"
                android:textColor="@color/text_name"/>

            <TextView
                android:id="@+id/guoJiaText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_text_test_chines"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/register_text_phone"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@color/text_name"/>

            <com.qb.wxui.widget.EdText
                android:id="@+id/phoneEdText"
                android:hint="@string/register_hint_phone"
                android:paddingStart="90dp"
                android:paddingEnd="0dp"
                android:textSize="16sp"
                android:textColor="@color/text_name"
                android:outlineAmbientShadowColor="@color/colorAccent"
                android:outlineSpotShadowColor="@color/colorAccent"
                android:shadowColor="@color/colorAccent"
                android:textColorHighlight="@color/text_name"
                android:textColorHint="@color/text_gray"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:maxLines="1"
                android:maxLength="11"/>

            <ImageView
                android:id="@+id/phoneDelClick"
                android:visibility="gone"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="10dp"
                android:src="@mipmap/icon_x"
                android:onClick="phoneDel"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/register_text_password"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@color/text_name"/>

            <com.qb.wxui.widget.EdText
                android:id="@+id/passwordEdText"
                android:hint="@string/register_hint_password"
                android:paddingStart="90dp"
                android:paddingEnd="0dp"
                android:textSize="16sp"
                android:textColor="@color/text_name"
                android:outlineAmbientShadowColor="@color/colorAccent"
                android:outlineSpotShadowColor="@color/colorAccent"
                android:shadowColor="@color/colorAccent"
                android:textColorHighlight="@color/text_name"
                android:textColorHint="@color/text_gray"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="16"/>

            <ImageView
                android:id="@+id/passwordDelClick"
                android:visibility="gone"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="10dp"
                android:src="@mipmap/icon_x"
                android:onClick="passwordDel"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_bg_admin"
        android:text="@string/register_button_register"
        android:onClick="register"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/bottomText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/text_gray"/>

</LinearLayout>